use Integer.valueOf, found by findbugs
git-svn-id: https://svn.exedio.com/cope/trunk/persistence@14987 e7d4fc99-c606-0410-b9bf-843393a9eab7